--- a/index.html
+++ b/index.html
@@ -4,14 +4,105 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<title>MediaPlayer</title>
-		<link rel="stylesheet" href="style.css">
-		<script src="script.js"></script>
+		<link rel="stylesheet" href="mediaplayer.css">
+		<script src="mediaplayer.js"></script>
+		<script>
+			window.addEventListener('DOMContentLoaded', () => {
+				const $audios = document.querySelectorAll('audio');
+				const $videos = document.querySelectorAll('video');
+				if ($audios) $audios.forEach(e => new MediaPlayer(e, 'audio'));
+				if ($videos) $videos.forEach(e => new MediaPlayer(e, 'video'));
+			});
+		</script>
+		<style>
+			body {
+				max-width: 960px;
+				margin: 1rem auto;
+				padding: 0 1rem;
+				box-sizing: border-box;
+			}
+			.codeblock dt {
+				display: inline-block;
+				padding: .5rem 1rem 0;
+				border-radius: .5rem .5rem 0 0;
+				background-color: hsl(210 50 90);
+				font-size: smaller;
+				vertical-align: middle;
+			}
+			.codeblock dd {
+				margin: 0;
+				padding: 1rem;
+				border-radius: 0 .5rem .5rem .5rem;
+				background-color: hsl(210 50 90);
+			}
+			.codeblock code {
+				white-space: pre-wrap;
+			}
+		</style>
 	</head>
 	<body>
 		<h1>MediaPlayer</h1>
-		<h2>Audio</h2>
+		<p>The custom media player library. Unify the player UI that differs across browsers.</p>
+		<p>Download: <a href="https://github.com/junosakura/mediaplayer">GitHub</a></p>
+		<h2>Usage</h2>
+		<p>1. Load the stylesheet and javascript.</p>
+		<dl class="codeblock">
+			<dt>HTML</dt>
+			<dd>
+				<div><code>&lt;link rel="stylesheet" href="mediaplayer.css"&gt;</code></div>
+				<div><code>&lt;script src="mediaplayer.js"&gt;&lt;/script&gt;</code></div>
+			</dd>
+		</dl>
+		<p>2. Add audio/video element.</p>
+		<dl class="codeblock">
+			<dt>HTML</dt>
+			<dd>
+				<div><code>&lt;audio src="sample.mp3"&gt;&lt;/audio&gt;</code></div>
+				<div><code>&lt;video src="sample.mp4"&gt;&lt;/video&gt;</code></div>
+			</dd>
+		</dl>
+		<p>3. Create objects of MediaPlayer class after loading the DOM.</p>
+		<dl class="codeblock">
+			<dt>JavaScript</dt>
+			<dd>
+				<div><code>window.addEventListener('DOMContentLoaded', () => {</code></div>
+				<div><code>	const $audios = document.querySelectorAll('audio');</code></div>
+				<div><code>	const $videos = document.querySelectorAll('video');</code></div>
+				<div><code>	if ($audios) $audios.forEach(e => new MediaPlayer(e, 'audio'));</code></div>
+				<div><code>	if ($videos) $videos.forEach(e => new MediaPlayer(e, 'video'));</code></div>
+				<div><code>});</code></div>
+			</dd>
+		</dl>
+		<h2>Custom</h2>
+		<p>You can easily change the color via CSS custom properties.</p>
+		<h3>Audio</h3>
+		<dl class="codeblock">
+			<dt>CSS</dt>
+			<dd>
+				<div><code>.mediaplayer-block[data-type="audio"] {</code></div>
+				<div><code>	--mediaplayer-maincolor: hsl(0 0 30);</code></div>
+				<div><code>	--mediaplayer-backcolor: hsl(0 0 90);</code></div>
+				<div><code>	--mediaplayer-seekcolor1: hsl(0 0 30);</code></div>
+				<div><code>	--mediaplayer-seekcolor2: hsl(0 0 60);</code></div>
+				<div><code>}</code></div>
+			</dd>
+		</dl>
+		<h3>Video</h3>
+		<dl class="codeblock">
+			<dt>CSS</dt>
+			<dd>
+				<div><code>.mediaplayer-block[data-type="video"] {</code></div>
+				<div><code>	--mediaplayer-maincolor: hsl(0 0 30);</code></div>
+				<div><code>	--mediaplayer-backcolor: hsl(0 0 90);</code></div>
+				<div><code>	--mediaplayer-seekcolor1: hsl(0 0 30);</code></div>
+				<div><code>	--mediaplayer-seekcolor2: hsl(0 0 60);</code></div>
+				<div><code>}</code></div>
+			</dd>
+		</dl>
+		<h2>Sample</h2>
+		<h3>Audio</h3>
 		<div><audio src="sample.mp3" controls></audio></div>
-		<h2>Video</h2>
+		<h3>Video</h3>
 		<div><video src="sample.mp4" controls></video></div>
 	</body>
 </html>
