--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
 			<dt>CSS</dt>
 			<dd>
 				<div><code>.mediaplayer-block[data-type="video"] {</code></div>
-				<div><code>	--mediaplayer-maincolor: hsl(0 0 30);</code></div>
-				<div><code>	--mediaplayer-backcolor: hsl(0 0 90);</code></div>
-				<div><code>	--mediaplayer-seekcolor1: hsl(0 0 30);</code></div>
-				<div><code>	--mediaplayer-seekcolor2: hsl(0 0 60);</code></div>
+				<div><code>	--mediaplayer-maincolor: hsl(0 0 100);</code></div>
+				<div><code>	--mediaplayer-backcolor: linear-gradient(transparent, hsl(0 0 0 / .5));</code></div>
+				<div><code>	--mediaplayer-seekcolor1: hsl(0 0 100);</code></div>
+				<div><code>	--mediaplayer-seekcolor2: hsl(0 0 100 / .5);</code></div>
 				<div><code>}</code></div>
 			</dd>
 		</dl>
